--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {"scripts": {
   "start": "reveal-md content/ -w",
-  "build": "rm -rf docs && reveal-md content/ --static docs --static-dirs=content/attachments"
+  "build": "rm -rf docs && reveal-md content/ --static docs --static-dirs=content/attachments && touch docs/.nojekyll"
 }
 }
