--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
     "start": "reveal-md content/ -w",
-    "build": "rm -rf docs && reveal-md content/ --static docs --static-dirs=content/attachments && touch docs/.nojekyll"
+    "build": "rm -rf docs && reveal-md content/ --static docs --static-dirs=content/attachments --assets-dir slides/assets && touch docs/.nojekyll"
   },
   "dependencies": {
-    "reveal-md": "^5.3.3",
-    "reveal.js": "^4.3.0"
+    "reveal-md": "^5.1.3",
+    "reveal.js": "^4.2.1"
   }
 }
