--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   },
   "dependencies": {
     "reveal-md": "^5.1.3",
-    "reveal.js": "^4.2.1"
+    "reveal.js": "git+https://github.com/hakimel/reveal.js.git#master"
   }
 }
